--- a/visit.html
+++ b/visit.html
@@ -107,6 +107,7 @@
       </div>
 
       <div class="six wide column">
+        <a href="//maps.apple.com/?q=Jewels+By+The+Sea">Open in Maps</a>
         <div class="google-map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3351.857526300825!2d-117.27394304909458!3d32.8490237875237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc03fc4350450f%3A0x41b23c731ac358f4!2sJewels+By+the+Sea!5e0!3m2!1sen!2sus!4v1456196866978"  width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
